--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <button type="button" onclick="addNewQuote()" class="btn btn-success">Insert</button>&nbsp;&nbsp;
             </div>
             <button type="submit" onclick="deleteQuote()"class="btn btn-danger">Delete</button>&nbsp;&nbsp;
-            <button type="submit" onclick="displayRandomQuote()" class="btn btn-primary">Refresh</button>&nbsp;&nbsp;
+            <button type="submit" onclick="displayRandomQuote()" class="btn btn-primary">Display</button>&nbsp;&nbsp;
           </div>
         </div>
 <!-- Link the JavaScript file -->
